--- a/src/views/header/header.css
+++ b/src/views/header/header.css
@@ -9,7 +9,6 @@ header {
 .headerNav {
   display: flex;
   flex-direction: column;
-  max-width: 1200px;
   margin: 0 auto;
 }
 .navbarBox {
@@ -28,6 +27,13 @@ header {
   padding: 15px 30px;
 }
 
+.navbar a {
+  color: #4e944f;
+}
+.navbar a:hover {
+  color: black;
+}
+
 .mainlogo {
   position: absolute;
   top: 10px;
@@ -41,6 +47,7 @@ header {
 .logoTitle {
   font-family: "Bungee Shade", cursive;
   color: #4e944f;
+  font-size: 60px;
 }
 
 .pageTop {
@@ -50,12 +57,12 @@ header {
   text-align: center;
   color: #4e944f;
 }
-.brand {
+/* .brand {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 50px;
-}
+  font-size: 60px;
+} */
 .brand img {
   height: 40px;
   vertical-align: middle;
@@ -68,7 +75,7 @@ header .subTitle {
 }
 
 .Category {
-  margin-bottom: 10px;
+  margin: 0 0 10px 200px;
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
