--- a/src/views/orderComplete/orderComplete.html
+++ b/src/views/orderComplete/orderComplete.html
@@ -42,7 +42,7 @@
   <body>
     <!-- 헤더 -->
     <header>
-      <section id="headerNav">
+      <section id="headerNav" class="headerNav">
         <nav role="navigation" aria-label="main navigation" class="navbarBox">
           <ul id="navbar" class="navbar"></ul>
         </nav>
