--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -29,22 +29,22 @@ header .subTitle {
 /* 메인 배너 */
 .main{
   width: 100vw;
-  height: 100%;
+  height: 60vh;
 }
 .slider{
-  width: 1280px;
-  height: 720px;
+  width: 100%;
+  height: 643px;
   overflow: hidden;
 }
 .slides {
   position: relative;
   display: flex;
   width: 2560px;
-  height: 720px;
+  height: 643px;
 }
 .slide{
   width: 1280px;
-  height: 720px;
+  height: 643px;
 }
 .imgBtn{
   width: 30px; 
@@ -54,17 +54,18 @@ header .subTitle {
   background: transparent;
   color: #4e944f;
 }
+.slide,
 .imgBtn:hover{
   cursor: pointer;
 }
 .left{
   position: absolute;
-  top: 50%;
+  top: 85%;
   left: 3%;
-  z-index: 100;
+  z-index: 2;
 }
 .right{
   position: absolute;
-  top: 50%;
+  top: 85%;
   right: 3%;
 }
