--- a/src/views/mypage/mypage.css
+++ b/src/views/mypage/mypage.css
@@ -17,6 +17,13 @@
   padding: 30px 0;
 }
 
+.mypageInfo {
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  padding: 0 30px;
+  width: 500px;
+}
+
 .userInfo {
   margin: 30px;
   display: flex;
@@ -31,6 +38,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-top: 20px;
 }
 
 .mypageNav a {
