--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-weight: bold;
 }
 .pageTop {
@@ -27,11 +27,11 @@ header .subTitle {
 }
 
 /* 메인 배너 */
-.main{
+.main {
   width: 100vw;
   height: 60vh;
 }
-.slider{
+.slider {
   width: 100%;
   height: 643px;
   overflow: hidden;
@@ -42,12 +42,12 @@ header .subTitle {
   width: 2560px;
   height: 643px;
 }
-.slide{
-  width: 1280px;
+.slide {
+  width: 100vh;
   height: 643px;
 }
-.imgBtn{
-  width: 30px; 
+.imgBtn {
+  width: 30px;
   height: 30px;
   border: none;
   outline: none;
@@ -55,16 +55,16 @@ header .subTitle {
   color: #4e944f;
 }
 .slide,
-.imgBtn:hover{
+.imgBtn:hover {
   cursor: pointer;
 }
-.left{
+.left {
   position: absolute;
   top: 85%;
   left: 3%;
   z-index: 2;
 }
-.right{
+.right {
   position: absolute;
   top: 85%;
   right: 3%;
