--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -27,45 +27,21 @@ header .subTitle {
 }
 
 /* 메인 배너 */
-.main{
-  width: 100vw;
-  height: 60vh;
-}
-.slider{
-  width: 100%;
-  height: 643px;
-  overflow: hidden;
-}
-.slides {
-  position: relative;
+.mainBanner {
   display: flex;
-  width: 2560px;
-  height: 643px;
+  width: 100vw;
+  align-items: stretch;
 }
-.slide{
-  width: 1280px;
-  height: 643px;
+.big {
+  flex-basis: 50%;
 }
-.imgBtn{
-  width: 30px; 
-  height: 30px;
-  border: none;
-  outline: none;
-  background: transparent;
-  color: #4e944f;
+.small {
+  flex-basis: 50%;
 }
-.slide,
-.imgBtn:hover{
+.img {
+  width: 50vw;
+  height: 80vh;
+}
+.img:hover{
   cursor: pointer;
-}
-.left{
-  position: absolute;
-  top: 85%;
-  left: 3%;
-  z-index: 2;
-}
-.right{
-  position: absolute;
-  top: 85%;
-  right: 3%;
 }
