--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -43,7 +43,6 @@
         <div class="pageTop">
           <a href="/" class="brand">
             <span class="logoTitle">m</span>
-            <!-- <span id="title"><span class="subTitle">먹거리장터</span>먹짱</span> -->
           </a>
         </div>
         <div class="Category">
@@ -54,13 +53,9 @@
     </header>
     <!--메인-->
     <main role="main" class="main">
-      <section class="slider">
-        <button class="imgBtn left"><i class="fas fa-chevron-left fa-2x" aria-hidden="true"></i></button>
-        <ul class="slides">
-          <li class="slide"><img class="img" id="categoryBig" src="../배너1.PNG"></li>
-          <li class="slide"><img class="img" id="categorySmall" src="../배너2.PNG"></li>
-        </ul>
-        <button class="imgBtn right"><i class="fas fa-chevron-right fa-2x" aria-hidden="true"></i></button>   
+      <section class="mainBanner">
+        <img class="img big" id="categoryBig" src="../배너1.PNG">
+        <img class="img small" id="categorySmall" src="../배너2.PNG">
       </section>
     </main>
   </body>
